Background demo0001: Blur Bg Switch(fix the background-image opacity switch with a item-wrap)

--- a/demos/Background/demo0001/style.scss
+++ b/demos/Background/demo0001/style.scss
@@ -10,22 +10,28 @@
   width: calc(100% + 120px);
   height: calc(100% + 120px);
 
+  .item-wrap {
+    opacity: 0;
+    width: inherit;
+    height: inherit;
+    transition: all .36s ease-in-out;
+
+    &.active {
+      opacity: .89;
+    }
+  }
+
   .item {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    opacity: 0;
     width: 100%;
     height: 100%;
     filter: blur(30px);
     background-size: cover;
     transition: opacity .3s ease-in-out, background .3s ease-in-out;
-
-    &.active {
-      opacity: .89;
-    }
   }
 }
 
@@ -38,7 +44,6 @@
   left: calc(50% - 150px);
   width: 300px;
   height: 32px;
-  // border: 2px solid #333;
 
   .btn {
     margin: 12px;
@@ -49,9 +54,9 @@
     filter: blur(1px);
     transition: all .18s ease-in-out;
 
+    &.active,
     &:hover {
       background: #eee;
-      // filter: blur(0);
     }
   }
 }
